
## [Unreleased] -

### Changed

- Cleaned setup.py from unneeded dependencies and also introduces extras_require to allow the different optional installations to work properly.
- Choosing PySide2 as plot backend without setting the environment variable. The new way is not blocking other backends, if PySide2 is not installed and the variable is unset.

### Fixed

- "bias_val" variable in DutHdev.get_bias_info was unset
- Some possible runtime errors fixed thanks to pylance linting.

## [1.5.0-rc.3] - 2022.04.15

### Added

- added "no ending" to parameter loading in MCard
- Added 3 policies how to handle missing parameters for McParameterCollection.set_values.
- Documentation for M1 mac installation
- logs directory directly in repo using .gitkeep

### Changed

- semver deprecated VersionInfo. Replaced by migration strategy from <https://python-semver.readthedocs.io/en/latest/migration/migratetosemver3.html?highlight=VersionInfo#use-version-instead-of-versioninfo>
- Sweep creation had a faulty type for sweepdef

## [1.4.0] - 2022.03.08

### Added

- Documentation for DMT.external library.
- Added a proper Sweep.get_sweep

### Changed

- Merged df_to_sweep with Sweep.get_sweep to get_sweepdef
- if copy_va_files = False in DutView, the VA-File is copied into a central VA-Codes cache and imported from there using a relative path into the netlist. This way the files are more likely to be cached correctly by the interfaced simulator.
- For compatibility with python 3.8 and 3.9, do not use | operator for typing.

### Move

- Moved DMT.verilogae.helpers into DMT.external.verilogae. This is more fitting.
- Moved vectorize, check_nan_inf and memoize to extraction.model
- Moved SI_UNITS_CONVERTER, resolve_siunitx and tex_to_label from core.utils to external.latex
- Moved is_iterable, flatten and strictly_increasing to data_processor

### Removedand
